exports[`invalid(1): {\"scripts\": {\"test\": \"/usr/bin/node --test\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "/usr/bin/node --test"}}

`;

exports[`invalid(1): {\"scripts\": {\"test\": \"/usr/bin/node --test\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "/usr/bin/node --test"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(10): {\"scripts\": {\"test\": \"tool --profile:/tmp/config\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "tool --profile:/tmp/config"}}

`;

exports[`invalid(10): {\"scripts\": {\"test\": \"tool --profile:/tmp/config\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "tool --profile:/tmp/config"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(11): {\"scripts\": {\"test\": \"tool profile_file:/tmp/config\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "tool profile_file:/tmp/config"}}

`;

exports[`invalid(11): {\"scripts\": {\"test\": \"tool profile_file:/tmp/config\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "tool profile_file:/tmp/config"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(12): {\"scripts\": {\"test\": \"tool metadata:/tmp/config\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "tool metadata:/tmp/config"}}

`;

exports[`invalid(12): {\"scripts\": {\"test\": \"tool metadata:/tmp/config\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "tool metadata:/tmp/config"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(13): {\"scripts\": {\"test\": \"cc -I/usr/include source.c\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "cc -I/usr/include source.c"}}

`;

exports[`invalid(13): {\"scripts\": {\"test\": \"cc -I/usr/include source.c\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "cc -I/usr/include source.c"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(14): {\"scripts\": {\"test\": \"tool @/tmp/options\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "tool @/tmp/options"}}

`;

exports[`invalid(14): {\"scripts\": {\"test\": \"tool @/tmp/options\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "tool @/tmp/options"}}
    |                      ^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(15): {\"scripts\": {\"test\": \"cc -IC:\\\\sdk source.c\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "cc -IC:\\\\sdk source.c"}}

`;

exports[`invalid(15): {\"scripts\": {\"test\": \"cc -IC:\\\\sdk source.c\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "cc -IC:\\\\sdk source.c"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(16): {\"scripts\": {\"build\": \"gcc -Wl,-rpath,/usr/lib source.c\"}} 1`] = `

[Input]
  1 | {"scripts": {"build": "gcc -Wl,-rpath,/usr/lib source.c"}}

`;

exports[`invalid(16): {\"scripts\": {\"build\": \"gcc -Wl,-rpath,/usr/lib source.c\"}} 2`] = `

Message:
> 1 | {"scripts": {"build": "gcc -Wl,-rpath,/usr/lib source.c"}}
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`build\` script contains an absolute path.

`;

exports[`invalid(17): {\"scripts\": {\"test\": \"echo {/tmp/file,/var/file}\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "echo {/tmp/file,/var/file}"}}

`;

exports[`invalid(17): {\"scripts\": {\"test\": \"echo {/tmp/file,/var/file}\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "echo {/tmp/file,/var/file}"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(18): {\"scripts\": {\"test\": \"cl /DOUTPUT=/tmp source.c\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "cl /DOUTPUT=/tmp source.c"}}

`;

exports[`invalid(18): {\"scripts\": {\"test\": \"cl /DOUTPUT=/tmp source.c\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "cl /DOUTPUT=/tmp source.c"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(19): {\"scripts\": {\"test\": \"cl /Fo:C:\\\\build\\\\output.obj source.c\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "cl /Fo:C:\\\\build\\\\output.obj source.c"}}

`;

exports[`invalid(19): {\"scripts\": {\"test\": \"cl /Fo:C:\\\\build\\\\output.obj source.c\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "cl /Fo:C:\\\\build\\\\output.obj source.c"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(2): {\"scripts\": {\"test\": \"node /Users/me/project/test.js\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "node /Users/me/project/test.js"}}

`;

exports[`invalid(2): {\"scripts\": {\"test\": \"node /Users/me/project/test.js\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "node /Users/me/project/test.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(20): {\"scripts\": {\"test\": \"PATH=bin:/usr/bin tool\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "PATH=bin:/usr/bin tool"}}

`;

exports[`invalid(20): {\"scripts\": {\"test\": \"PATH=bin:/usr/bin tool\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "PATH=bin:/usr/bin tool"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(21): {\"scripts\": {\"test\": \"PATH=https://example.com/bin:/usr/bin tool\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "PATH=https://example.com/bin:/usr/bin tool"}}

`;

exports[`invalid(21): {\"scripts\": {\"test\": \"PATH=https://example.com/bin:/usr/bin tool\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "PATH=https://example.com/bin:/usr/bin tool"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(22): {\"scripts\": {\"test\": \"OUT=/tmp=https://example.com tool\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "OUT=/tmp=https://example.com tool"}}

`;

exports[`invalid(22): {\"scripts\": {\"test\": \"OUT=/tmp=https://example.com tool\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "OUT=/tmp=https://example.com tool"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(23): {\"scripts\": {\"test\": \"(/usr/bin/node --test)\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "(/usr/bin/node --test)"}}

`;

exports[`invalid(23): {\"scripts\": {\"test\": \"(/usr/bin/node --test)\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "(/usr/bin/node --test)"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(24): {\"scripts\": {\"test\": \"echo $(/usr/bin/tool)\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "echo $(/usr/bin/tool)"}}

`;

exports[`invalid(24): {\"scripts\": {\"test\": \"echo $(/usr/bin/tool)\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "echo $(/usr/bin/tool)"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(25): {\"scripts\": {\"test\": \"C:/tools/node.exe test.js\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "C:/tools/node.exe test.js"}}

`;

exports[`invalid(25): {\"scripts\": {\"test\": \"C:/tools/node.exe test.js\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "C:/tools/node.exe test.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(26): {\"scripts\": {\"test\": \"C://tools/node.exe test.js\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "C://tools/node.exe test.js"}}

`;

exports[`invalid(26): {\"scripts\": {\"test\": \"C://tools/node.exe test.js\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "C://tools/node.exe test.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(27): {\"scripts\": {\"test\": \"C:///tools/node.exe test.js\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "C:///tools/node.exe test.js"}}

`;

exports[`invalid(27): {\"scripts\": {\"test\": \"C:///tools/node.exe test.js\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "C:///tools/node.exe test.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(28): {\"scripts\": {\"test\": \"C:\\\\tools\\\\node.exe test.js\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "C:\\\\tools\\\\node.exe test.js"}}

`;

exports[`invalid(28): {\"scripts\": {\"test\": \"C:\\\\tools\\\\node.exe test.js\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "C:\\\\tools\\\\node.exe test.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(29): {\"scripts\": {\"test\": \"\\\"C:\\\\Program Files\\\\tool.exe\\\" --version\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "\\"C:\\\\Program Files\\\\tool.exe\\" --version"}}

`;

exports[`invalid(29): {\"scripts\": {\"test\": \"\\\"C:\\\\Program Files\\\\tool.exe\\\" --version\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "\\"C:\\\\Program Files\\\\tool.exe\\" --version"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(3): {\"scripts\": {\"test\": \"\\\"/Applications/My Tool/tool\\\" --version\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "\\"/Applications/My Tool/tool\\" --version"}}

`;

exports[`invalid(3): {\"scripts\": {\"test\": \"\\\"/Applications/My Tool/tool\\\" --version\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "\\"/Applications/My Tool/tool\\" --version"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(30): {\"scripts\": {\"test\": \"\\\\tools\\\\test.exe\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "\\\\tools\\\\test.exe"}}

`;

exports[`invalid(30): {\"scripts\": {\"test\": \"\\\\tools\\\\test.exe\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "\\\\tools\\\\test.exe"}}
    |                      ^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(31): {\"scripts\": {\"test\": \"\\\\\\\\server\\\\share\\\\tool.exe\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "\\\\\\\\server\\\\share\\\\tool.exe"}}

`;

exports[`invalid(31): {\"scripts\": {\"test\": \"\\\\\\\\server\\\\share\\\\tool.exe\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "\\\\\\\\server\\\\share\\\\tool.exe"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(32): {\"scripts\": {\"test\": \"/usr/bin/node /tmp/test.js\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "/usr/bin/node /tmp/test.js"}}

`;

exports[`invalid(32): {\"scripts\": {\"test\": \"/usr/bin/node /tmp/test.js\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "/usr/bin/node /tmp/test.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(33): {\"scripts\": {\"test\": \"node --test\", \"test\": \"/usr/bin/node --test\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "node --test", "test": "/usr/bin/node --test"}}

`;

exports[`invalid(33): {\"scripts\": {\"test\": \"node --test\", \"test\": \"/usr/bin/node --test\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "node --test", "test": "/usr/bin/node --test"}}
    |                                             ^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(34): {\"scripts\": {\"test\": \"node --test\"}, \"scripts\": {\"test\": \"/usr/bin/node --test\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "node --test"}, "scripts": {"test": "/usr/bin/node --test"}}

`;

exports[`invalid(34): {\"scripts\": {\"test\": \"node --test\"}, \"scripts\": {\"test\": \"/usr/bin/node --test\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "node --test"}, "scripts": {"test": "/usr/bin/node --test"}}
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(35): {\"scripts\": {\"pretest\": null, \"test\": \"/usr/bin/node --test\"}} 1`] = `

[Input]
  1 | {"scripts": {"pretest": null, "test": "/usr/bin/node --test"}}

`;

exports[`invalid(35): {\"scripts\": {\"pretest\": null, \"test\": \"/usr/bin/node --test\"}} 2`] = `

Message:
> 1 | {"scripts": {"pretest": null, "test": "/usr/bin/node --test"}}
    |                                       ^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(36): {\"scripts\": {\"test\": \"/usr/bin/node\", \"build\": \"C:/tools/build.exe\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "/usr/bin/node", "build": "C:/tools/build.exe"}}

`;

exports[`invalid(36): {\"scripts\": {\"test\": \"/usr/bin/node\", \"build\": \"C:/tools/build.exe\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "/usr/bin/node", "build": "C:/tools/build.exe"}}
    |                      ^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(36): {\"scripts\": {\"test\": \"/usr/bin/node\", \"build\": \"C:/tools/build.exe\"}} 3`] = `

Message:
> 1 | {"scripts": {"test": "/usr/bin/node", "build": "C:/tools/build.exe"}}
    |                                                ^^^^^^^^^^^^^^^^^^^^ The \`build\` script contains an absolute path.

`;

exports[`invalid(4): {\"scripts\": {\"test\": \"sh -c \\\"node /usr/bin/tool\\\"\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "sh -c \\"node /usr/bin/tool\\""}}

`;

exports[`invalid(4): {\"scripts\": {\"test\": \"sh -c \\\"node /usr/bin/tool\\\"\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "sh -c \\"node /usr/bin/tool\\""}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(5): {\"scripts\": {\"test\": \"echo \\\"https://example.com /tmp/file\\\"\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "echo \\"https://example.com /tmp/file\\""}}

`;

exports[`invalid(5): {\"scripts\": {\"test\": \"echo \\\"https://example.com /tmp/file\\\"\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "echo \\"https://example.com /tmp/file\\""}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(6): {\"scripts\": {\"test\": \"node --test > /dev/null\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "node --test > /dev/null"}}

`;

exports[`invalid(6): {\"scripts\": {\"test\": \"node --test > /dev/null\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "node --test > /dev/null"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(7): {\"scripts\": {\"test\": \"node --test&&/usr/bin/tool\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "node --test&&/usr/bin/tool"}}

`;

exports[`invalid(7): {\"scripts\": {\"test\": \"node --test&&/usr/bin/tool\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "node --test&&/usr/bin/tool"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(8): {\"scripts\": {\"test\": \"CACHE_DIR=/tmp/cache node test.js\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "CACHE_DIR=/tmp/cache node test.js"}}

`;

exports[`invalid(8): {\"scripts\": {\"test\": \"CACHE_DIR=/tmp/cache node test.js\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "CACHE_DIR=/tmp/cache node test.js"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;

exports[`invalid(9): {\"scripts\": {\"test\": \"tool --config=/etc/tool.json\"}} 1`] = `

[Input]
  1 | {"scripts": {"test": "tool --config=/etc/tool.json"}}

`;

exports[`invalid(9): {\"scripts\": {\"test\": \"tool --config=/etc/tool.json\"}} 2`] = `

Message:
> 1 | {"scripts": {"test": "tool --config=/etc/tool.json"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`test\` script contains an absolute path.

`;
